added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,9 +12,79 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
-    </main>
+      <section class="card" id="html-section">
+        class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The following are common HTML tags (remember to use the carrots around these to make them functional): 
+     The ul, ol, and li elements = Unordered Lists, Ordered Lists, and List Items
 
+    |P = Paragraph 
+
+  |Li = List Item
+
+|Src = Source
+
+|Br = Line Break</li>
+<li>  The <a> element (which stands for anchor) creates links to the same webpage or other webpages.</li>
+  <li>The href attribute points to the URL for the link</li>
+    <li>The body (wc) element is an example of a semantic HTML element. In semantic HTML elements, the name of the element describes its content and the role it plays on a webpage.</body> li>
+   </li>The words “element” and “tag” are commonly used interchangeably in the web development world, but it is important to know the difference. An element refers to the entire element from opening tag to closing tag, whereas a tag refers only to what appears inside the angle brackets.</li>
+<li>The <body> element is an example of a semantic HTML element. In semantic HTML elements, the name of the element describes its content and the role it plays on a webpage.</li>
+<li> The script element (with carrots around it) embeds client-side scripts in the HTML document</li>
+<li>The <head> element is a container for metadata. <meta> elements contain information about the page that is used by the browser. The user wont see information in the <head> or <meta> elements.</li>
+  <li>Elements that are nested inside other elements are called child elements. If there are three elements nested inside of a <body> element, those three nested elements are known as child elements. The element that holds all the children—in this case, the <body> element—is known as the parent element. This “parent/child” language is often used by developers to explain the relationship among elements in HTML.</li>
+    <li> !DOCTYPE (with carrots) is not case-sensitive because it is a declaration. Declarations are not case-sensitive; HTML elements are case-sensitive.</li>
+    <li> html (wc) is opening tag, which represents the root, or start, of our HTML document.</li>
+    <li>lang="en", which tells the browser the language for the webpage (in this case, en for English) </li>
+      <li>HTML attributes are always defined in the beginning element, never the closing element. </li>
+      <li>The head (wc) element contains the metadata for our web application. </li>
+      <li>Metadata is data about our webpage that the browser uses to effectively serve our webpage to users. </li>
+      <li>Search engine optimization (SEO) is the process of improving the ranking of a website in search engines such as Google or Bing. Better SEO results in your website more frequently showing up in searches.
+      <li>The style (wc) element defines the CSS styles associated with a website.</li>
+      <li>The base (wc) element defines the base URL for a webpage.</li>
+      <li>The link (wc) element connects an external resource to the HTML document. </li>
+      <li>The meta (wc) element defines metadata such as the character set, description, keywords, author, and viewport. </li>
+</ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout -b feature/starter-code: Creates a feature branch named "starter code" -or whatever you'd want to replace that with- </li>
+          <li>The git command must precede every git statment</li>
+          <li>The checkout command is to move the working branch to a new branch</li>
+<li> The -b flag creates a new branch</li>
+  <li>The feature/starter-code is the name of the new branch. The prefix feature indicates it is going to be a feature branch</li>
+  <li>Git add -A: Use this to add the starter code to the current working branch. The add command adds modifications in the current working branch to the staging area. The -A flag indicates that we want to add all changes.</li>
+  <li>The staging area informs Git that the changes will be added in the next commit</li>
+  <li>git commit -m "add starter code": A commit that creates a snapshot of the  currently staged changes. It adds to the current branch you are in.</li>
+  <li>Use git pull origin main to double check if our local branch is in sync with the base branch in GitHub.  It is important to always do a git pull to make sure that you have the latest version of the project on your local computer before you start to work. Otherwise, you might be working on outdated code</li>
+<li>Always do a git pull to make sure that you have the latest version of the project on your local environment</li>
+<li>git push origin feature/starter-code: To push changes to the remove branch in github</li>
+
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+   
+      </section>
+    </main>
+    <h2>JavaScript</h2>
+    <ul>
+      <li>Enter your JavaScript notes here</li>
+    </ul>
     <footer>
       <p>I can code!</p>
     </footer>
