--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section class="card" id="html-section">
-        class="card" id="html-section">
+      <section>
+        <section class="card" id="css-section">
         <h2>HTML</h2>
         <ul>
           <li>The head element contains information about the webpage.</li>
@@ -53,7 +53,28 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+              <li>A selector (e.g., div) targets the elements or attributes to which the rules apply.</li>
+          <li>Declarations have two parts: the CSS property and its value. For example, color: blue; has color as the property and blue as its value.</li>
+          <li>In CSS, the margin property adds space outside an element (not visible on the page), while the padding property adds space inside the element, making it larger. The CSS box model includes margins, borders, padding, and content.</li>
+          <li>The * selector applies styles to all elements on the page.</li>
+          <li>We combine two selectors into a single CSS rule with a comma, allowing the declarations to affect both selectors.</li>
+          <li>To connect an external CSS file to an HTML file, we use the <link> element. Having both files in the same project doesn’t automatically link them.</li>
+          <li>We add a link element to create a connection to an external file, and add it after the final meta element but before the title element.</li>
+          <li>The link element connects to an external file. Add it after the last meta element and before the title element </li>
+          <li>The rel attribute defines the relationship between the current document and the linked resource.</li>
+          <li> h1 and h2 rule assignment is a positioning property, text-align. This is one way to center a title or heading on a webpage.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>box-shadow: Adds shadow effects.</li>
+          <li>X offset (#px): Defines the shadow's horizontal extent (to the right).</li>
+          <li>Y offset (#px): Defines the shadow's vertical extent (below the box).</li>
+          <li>Color: Defined using an HTML hexadecimal code (e.g., #888888).</li>
+          <li>Multiple shadows can be set by separating them with commas.</li>
+          <li>width: #%;: Sets the width to a #% of the container.</li>
+          <li>margin: #px auto;: Adds a #px margin on top and bottom, and centers horizontally.</li>
+          <li>border: #px solid gray;: Adds a #px solid gray border.</li>
+          <li>box-shadow: #px #px ##;: Adds a shadow with a #px horizontal offset, #px vertical offset, and color ##.</li>
+          <li>The href attribute specifies the URL of the external resource. It uses a relative path based on the current document’s location (e.g., index.html). To find the stylesheet, we look in the assets folder, so the path is assets/style.css.</li>
         </ul>
       </section>
    
@@ -85,6 +106,8 @@
     <ul>
       <li>Enter your JavaScript notes here</li>
     </ul>
+    </section>
+    </main>
     <footer>
       <p>I can code!</p>
     </footer>
