--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section>
@@ -99,10 +100,11 @@
         </ul>
       </section>
    
-      <section class="card" id="javascript-section">
+      
    
       </section>
     </main>
+    <section class="card" id="javascript-section">
     <h2>JavaScript</h2>
     <ul>
       <li>Enter your JavaScript notes here</li>
@@ -112,5 +114,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
