complete index file with html, css and java added

--- a/index.html
+++ b/index.html
@@ -107,7 +107,26 @@
     <section class="card" id="javascript-section">
     <h2>JavaScript</h2>
     <ul>
-      <li>Enter your JavaScript notes here</li>
+      <li>Variable Types: String: Sequence of text; use quotes. | Number: Numeric values; no quotes. | Boolean: True/false values; use keywords without quotes. | Array: Stores multiple values in one reference.
+        | Object: Any data structure; everything in JavaScript is an object. | 
+      </li>
+      <li>Conditionals: Allow execution of code based on true/false evaluations. The if...else statement checks a condition: if true, the if block runs; if false, the else block executes. This enables dynamic decision-making in your code. You can also use else if to chain multiple conditions, creating complex logic flows to handle various scenarios effectively.
+      </li>
+      <li>Functions: Packages reusable code; defined with function.
+        Example: function helloWorld() then add curly brackets and code. Call functions by name to execute. 
+        </li>
+<li>Events: Code structures that respond to browser activities (e.g., clicks).
+</li>
+<li>Declaring Variables: Use const for immutable variables; let for variables that can change.
+</li>
+<li>Linking Files: link for CSS in head, script for JavaScript in <body>.
+</li>
+<li>Control Flow: Code execution order, top to bottom. Conditional statements and loops control flow.
+</li>
+<li>Truthy and Falsy Values: Falsy: 0, -0, "", null, undefined, NaN, false. Truthy: All other values.</li>
+<li>Arrays: Group related data. Declared using const, e.g., const shapes = ["triangle", "square", "pentagon", "circle"];.</li>
+<li>For Loops: Efficiently iterate through array items.</li>
+<li>Debugging Functions: Ensure functions are called to execute. Update function references as needed.</li>
     </ul>
     </section>
     </main>
